[package]
name = "color_palette_gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.84"
image = { version = "0.24.5", default-features = false, features = ["jpeg", "png"] }
palette_extract = "0.1.0"

